unpackaged/main/default/objects/Revenue_Recognition__c/Revenue_Recognition__c.object-meta.xml
<CustomObject>
    <description>Revenue Recognition table for Billing Products</description>
    <label>Revenue Recognition</label>
    <nameField>
        <displayFormat>RR-{00000000}</displayFormat>
        <label>RevRec #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Recognition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>