unpackaged/main/default/objects/Revenue_Recognition__c/fields/Billing_Product__c.field-meta.xml
<CustomField>
    <fullName>Billing_Product__c</fullName>
    <label>Billing Product</label>
    <referenceTo>Billing_Product__c</referenceTo>
    <relationshipLabel>Revenue Recognition</relationshipLabel>
    <relationshipName>Revenue_Recognition</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>