unpackaged/main/default/objects/Revenue_Recognition__c/fields/Engagement_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Attendee</label>
    <referenceTo>Engagement_Attendee__c</referenceTo>
    <relationshipLabel>Revenue Recognition</relationshipLabel>
    <relationshipName>Revenue_Recognition</relationshipName>
    <type>Lookup</type>
</CustomField>