unpackaged/main/default/objects/Revenue_Recognition__c/fields/NCM_Product__c.field-meta.xml
<CustomField>
    <fullName>NCM_Product__c</fullName>
    <label>NCM Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Authorized_Products</valueSetName>
    </valueSet>
</CustomField>