unpackaged/main/default/objects/Revenue_Recognition__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Revenue Recognition</relationshipLabel>
    <relationshipName>Revenue_Recognition</relationshipName>
    <type>Lookup</type>
</CustomField>