unpackaged/main/default/objects/Revenue_Recognition__c/fields/Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Value__c</fullName>
    <inlineHelpText>List Value of Product</inlineHelpText>
    <label>Product Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>