unpackaged/main/default/objects/Revenue_Recognition__c/fields/Product_Value_Discount__c.field-meta.xml
<CustomField>
    <fullName>Product_Value_Discount__c</fullName>
    <label>Product Value Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>