unpackaged/main/default/objects/Revenue_Recognition__c/fields/Revenue_Modification_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Modification_Date__c</fullName>
    <inlineHelpText>Significant data change that alerts Accounting to review this record</inlineHelpText>
    <label>Revenue Modification Date</label>
    <type>Date</type>
</CustomField>