unpackaged/main/default/objects/Revenue_Recognition__c/fields/Revenue_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue Recognized?</label>
    <type>Checkbox</type>
</CustomField>