unpackaged/main/default/objects/Revenue_Recognition__c/fields/RevRec_Date__c.field-meta.xml
<CustomField>
    <fullName>RevRec_Date__c</fullName>
    <inlineHelpText>Date Revenue is to be recognized</inlineHelpText>
    <label>RevRec Date</label>
    <type>Date</type>
</CustomField>