unpackaged/main/default/objects/Revenue_Recognition__c/fields/RevRec_Notes__c.field-meta.xml
<CustomField>
    <fullName>RevRec_Notes__c</fullName>
    <label>RevRec Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>